# x86_disasm

./: .gitignore  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.msvc  Makefile64.msvc  README.md  X86_register.h  cmp_MSVC_win64.bat  cmp_MSVC_win64_clean.bat  config.h.in  configure  configure.ac  makefile  x86_disas.c  x86_disas.h  x86_disas_internals.h  x86_disasm_tests.c  x86_ins_codes.h  x86_register.c  x86_register.h  x86_tbl_entries.h
include/: Makefile.am  Makefile.in  X86_register.h  x86_disas.h  x86_disas_internals.h
lib/: Makefile.am  Makefile.in  X86_register.c  x86_disas.c  x86_tbl_entries.h
tests/: Makefile.am  Makefile.in  run-x86_disasm_tests.sh  x86_disasm_tests.c
